Fixed horizontal scroll issue

--- a/resume/components/resume.css
+++ b/resume/components/resume.css
@@ -8,6 +8,7 @@ header {
 
 .content {
 	text-align: center;
+	overflow-x: hidden;
 }
 
 ::content #contact {
